--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1>
         An Exciting Blog Post
       </h1>
-      <img src="images/balloon-sq6.jpg" alt="placeholder" class="feature">
+      <img src="balloon-sq6.jpg" alt="placeholder" class="feature">
       <p>Veggies es bonus vobis, proinde vos postulo essum magis kohlrabi welsh onion daikon amaranth tatsoi tomatillo melon
         azuki bean garlic.</p>
 
@@ -67,23 +67,23 @@
       <ul class="photos">
         <div style="display: flex; gap: 1px; margin-bottom: 1px;">
         <li>
-          <img src="images/balloon-sq1.jpg" alt="placeholder">
+          <img src="balloon-sq1.jpg" alt="placeholder">
         </li>
         <li>
-          <img src="images/balloon-sq2.jpg" alt="placeholder">
+          <img src="balloon-sq2.jpg" alt="placeholder">
         </li>
         </div>
         <div style="display: flex; gap:1px ;margin-bottom :1px;">
         <li>
-          <img src="images/balloon-sq3.jpg" alt="placeholder">
+          <img src="balloon-sq3.jpg" alt="placeholder">
         </li>
         
         <li>
-          <img src="images/balloon-sq4.jpg" alt="placeholder">
+          <img src="balloon-sq4.jpg" alt="placeholder">
         </li>
         </div>
         <li style="display: flex; width: 88px;">
-          <img src="images/balloon-sq5.jpg" alt="placeholder">
+          <img src="balloon-sq5.jpg" alt="placeholder">
         </li>
       </ul>
 
